# resvg-node

./: .gitignore  .npmignore  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
lib/: build.ts  download.ts  index.js  index.ts  install.ts  prebuild.ts
native/: Cargo.toml
native/src/: fonts.rs  lib.rs  neon_utils.rs  options.rs
src/: fonts.rs  lib.rs  options.rs
typings/: detect-libc.d.ts
