[package]
name = "resvg-node"
version = "0.1.0"
authors = ["Tyler Schrock <tschrock123@gmail.com>"]
license = "MPL-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "resvg_node"
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "1.0.0-alpha.0"

[dependencies]
fontdb = "0.3.0"
log = "0.4.11"
napi = { version = "1.0.0-alpha.0", features = ["napi1", "serde-json"] }
napi-derive = { version = "1.0.0-alpha.0" }
png = "0.16"
resvg = "0.12"
serde = { version = "1.0.117", features = ["derive"] }
svgtypes = "0.5"
usvg = "0.12"
