[package]
name = "resvg-node"
version = "0.1.0"
authors = ["Tyler Schrock <tschrock123@gmail.com>"]
license = "MPL-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "resvg_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.2"

[dependencies]
neon = "0.5.2"
neon-serde = { git = "https://github.com/Tschrock/neon-serde" }
neon-runtime = "0.5.2"
serde_bytes = "0.11.5"
serde = { version = "1.0.117", features = ["derive"] }
resvg = { git = "https://github.com/Tschrock/resvg" }
usvg = { git = "https://github.com/Tschrock/resvg" }
fontdb = "0.2.0"
svgtypes = "0.5"
log = "0.4.11"
