[package]
name = "resvg-node"
version = "0.1.0"
authors = ["Tyler Schrock <tschrock123@gmail.com>"]
license = "MPL-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "resvg_node"
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "0.2"

[dependencies]
napi = { version = "0.5", features = ["napi3", "serde-json"] }
napi-derive = { version = "0.5" }
serde = { version = "1.0.117", features = ["derive"] }
resvg = { git = "https://github.com/Tschrock/resvg" }
usvg = { git = "https://github.com/Tschrock/resvg" }
fontdb = "0.2.0"
svgtypes = "0.5"
log = "0.4.11"

[patch.crates-io]
napi = { git = "https://github.com/napi-rs/napi-rs" }
napi-derive = { git = "https://github.com/napi-rs/napi-rs" }
napi-build = { git = "https://github.com/napi-rs/napi-rs" }
